# mygameconsole

./: .gitignore  README.md  run_project.sh  setup_project.tcl
firmware/: Cargo.toml  memory.x
firmware/.cargo/: config.toml
firmware/src/: hw.rs  main.rs
firmware/xtask/: Cargo.toml
firmware/xtask/src/: main.rs
src/: game_2048_check.v  game_2048_core.v  game_2048_logic.v  game_2048_main.v  game_2048_status.v  game_console.v  io.xdc  memory_controller.v  ps2_keyboard_controller.v  screen_game.v  screen_over.v  screen_solid.v  screen_start.v  screen_win.v  tile_renderer.v  vga_controller.v
src/cpu/core/: RAM_B.v  ROM_D.v  RV32core.v  unit_load_store.v
src/display/: display.v  frame_scaler.v  tile_renderer.v  tile_sprite_renderer.v  ui_renderer.v  vga_controller.v
src/keyboard/: keyboard.v  keyboard_status_keeper.v  ps2_keyboard.v
src/memory/: RAM_B.v  ROM_D.v  ROM_music.v  blank_tile.coe  blank_tile.hex  memory_controller.v  memory_sizes.vh  tile_texture_rom.v  value_1024.coe  value_1024.hex  value_128.coe  value_128.hex  value_16.coe  value_2.coe  value_2.hex  value_2048.coe  value_2048.hex  value_256.coe  value_256.hex  value_32.hex  value_4.coe  value_4.hex  value_512.coe  value_512.hex  value_64.coe  value_64.hex  value_8.coe  value_8.hex
src/music/: io.xdc  top_beep.v
src/test/: tb_enhanced_2048.v  tb_game_2048_core.v  tb_game_2048_main.v  tb_game_console.v
tool/: img2coe.py  merge_tile_hex.py  png_to_coe.py
vivado/: build.tcl  vivado.sh
